--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "rule_resources" : [
       {
         "id" : "ruleset_1",
-        "enabled" : "true",
+        "enabled" : true,
         "path" : "rules.json"
       }
     ]
